# bit-gym

./: .gitignore  README.md  pyproject.toml
bit_gym/: manage.py
bit_gym/accounts/: admin.py  models.py
bit_gym/bit_gym/: asgi.py  settings.py  urls.py  wsgi.py
